# mbzirc_2020_wall_building

./: .gitignore  README.md  wall_mbzirc.txt  wall_reality.yaml
ros_packages/arena_scan_planner/: CMakeLists.txt  package.xml
ros_packages/arena_scan_planner/conf/: arena_scan.yaml
ros_packages/arena_scan_planner/include/: CSort.h  dubins_trajectory.h
ros_packages/arena_scan_planner/include/dubins/: MathCommon.h  dubins.h
ros_packages/arena_scan_planner/launch/: arena_scan_planner.launch
ros_packages/arena_scan_planner/python/: show_trajectories.py
ros_packages/arena_scan_planner/src/: arena_scan_planner.cpp  dubins_trajectory.cpp
ros_packages/arena_scan_planner/src/dubins/: MathCommon.cpp  angleinterval.cpp  arc.cpp  circle.cpp  dubins.cpp  dubinsmaneuver.cpp  dubinspath.cpp  line.cpp  path.cpp  state.cpp
ros_packages/arena_scan_planner/srv/: ArenaScanTrajectory.srv
ros_packages/automatic_start/: CMakeLists.txt  package.xml  plugins.xml
ros_packages/automatic_start/config/: .gitignore  automatic_start_mbzirc.yaml
ros_packages/automatic_start/launch/: automatic_start_mbzirc.launch
ros_packages/automatic_start/src/: automatic_start_mbzirc.cpp
ros_packages/brick_detection/: CMakeLists.txt  brick_detection.xml  package.xml
ros_packages/brick_detection/cfg/: brick_detection.cfg  rosconsole.yaml  simulation.yaml  uav.yaml  uav3_calib.yaml  uav63_calib.yaml  uav64_calib.yaml  uav65_calib.yaml  uav70_calib.yaml
ros_packages/brick_detection/include/: brick.h
ros_packages/brick_detection/launch/: bag_camp.launch  bag_fox.launch  bag_lima.launch  brick_detection.launch  poust_bag.launch  rosbag.launch
ros_packages/brick_detection/launch/old/: uav10.launch  uav5.launch
ros_packages/brick_detection/src/: brick.cpp  brick_depth.cpp  brick_detection.cpp  brick_map.cpp
ros_packages/brick_estimation/: CMakeLists.txt  package.xml  plugins.xml
ros_packages/brick_estimation/config/: brick_estimation_drs.cfg  default.yaml  simulation.yaml
ros_packages/brick_estimation/include/: batch_visualizer.h
ros_packages/brick_estimation/launch/: brick_estimation.launch
ros_packages/brick_estimation/src/: brick_estimation.cpp
ros_packages/brick_grasping/: CMakeLists.txt  README.md  package.xml  plugins.xml
ros_packages/brick_grasping/config/: default.yaml  simulation.yaml
ros_packages/brick_grasping/config/uavs/: delta.yaml
ros_packages/brick_grasping/launch/: brick_grasping.launch
ros_packages/brick_grasping/src/: brick_grasping.cpp
ros_packages/brick_mapping/: .gitignore  CMakeLists.txt  package.xml
ros_packages/brick_mapping/config/: params.yaml
ros_packages/brick_mapping/launch/: brick_mapping.launch
ros_packages/brick_mapping/msg/: MappedArenaObjects.msg  MappedArenaObjectsStamped.msg
ros_packages/brick_mapping/scripts/: mapping.py
ros_packages/brick_mapping/srv/: GetMappedArenaObjects.srv
ros_packages/brick_mapping/tmux_scripts/test_mapping/: session.yml
ros_packages/mbzirc_arena_config/: CMakeLists.txt  README.md  package.xml  plugins.xml
ros_packages/mbzirc_arena_config/arena_generator/: arena_generate.m  arena_plot.m  arena_write.m
ros_packages/mbzirc_arena_config/arena_generator/ball_arena/: ball_arena_generate.m  ball_arena_input.m  ball_arena_plot.m  ball_arena_write.m  copy_ball_world_to_mrs_general.sh
ros_packages/mbzirc_arena_config/arena_generator/default_arena/: copy_default_world_to_mrs_general.sh  default_arena_generate.m  default_arena_input.m  default_arena_write.m
ros_packages/mbzirc_arena_config/arena_generator/fire_arena/: fire_arena_generate.m  (+4 more)
ros_packages/mbzirc_arena_config/include/: arena_publisher.h
ros_packages/mbzirc_arena_config/launch/: arena_publisher.launch
ros_packages/mbzirc_arena_config/rviz/: arena.rviz
ros_packages/mbzirc_arena_config/src/: arena_publisher.cpp
ros_packages/mbzirc_arena_config/tmux_scripts/: rviz_arena.sh
ros_packages/mbzirc_flyto_planner/: CMakeLists.txt  package.xml
ros_packages/mbzirc_flyto_planner/action/: FlyTo.action
ros_packages/mbzirc_flyto_planner/config/: params.yaml
ros_packages/mbzirc_flyto_planner/launch/: client.launch  server_simulation.launch
ros_packages/mbzirc_flyto_planner/src/: flyto_client.cpp  flyto_server.cpp
ros_packages/mbzirc_msgs/: .gitignore  CMakeLists.txt  link_msg_files.sh  package.xml
ros_packages/mbzirc_msgs/src/: main.cpp
ros_packages/mrs_flexbe/mrs_flexbe_states/: CMakeLists.txt  package.xml  setup.py
ros_packages/mrs_gripper/: CMakeLists.txt  README.md  package.xml
ros_packages/mrs_gripper/launch/: uav.launch
ros_packages/mrs_gripper/src/: mrs_gripper.cpp
ros_packages/plan_keeper/: .gitignore  CMakeLists.txt  README.md  grand_generator.sh  grand_generator_simulation.sh  package.xml
ros_packages/plan_keeper/config/: params.yaml  planner.yaml  wall_mbzirc.txt  wall_mbzirc_round1.txt
ros_packages/plan_keeper/include/: dataset_loader_wall_mbzirc.h  plan_keeper.h
ros_packages/plan_keeper/launch/: uav.launch
ros_packages/plan_keeper/msg/: PlanDiagnostics.msg  PlanStateTypes.msg  WallState.msg
ros_packages/plan_keeper/plan_backup/: data.txt
ros_packages/plan_keeper/python/: generate_wall_mbzirc_uav.py  spiral_around_wall.py  wall_utils.py
ros_packages/plan_keeper/src/: dataset_loader_wall_mbzirc.cpp  empty_main.cpp  plan_keeper.cpp
ros_packages/plan_keeper/srv/: BrickPlan.srv  BrickResult.srv  ChangeState.srv  SetMappedPositions.srv
ros_packages/sim_battery/: CMakeLists.txt  package.xml
ros_packages/sim_battery/config/: t650.yaml
ros_packages/sim_battery/launch/: sim_battery.launch
ros_packages/sim_battery/scripts/: battery.py
ros_packages/simulated_magnet/: CMakeLists.txt  package.xml
ros_packages/simulated_magnet/cfg/: params.yaml
ros_packages/simulated_magnet/launch/: simulation.launch
ros_packages/simulated_magnet/src/: simulated_magnet.cpp
ros_packages/wall_simulation/: CMakeLists.txt  package.xml
ros_packages/wall_simulation/launch/: rviz_uav1.launch  rviz_uav2.launch  rviz_uav5.launch  simulation.launch
ros_packages/wall_simulation/rviz/: uav1.rviz  uav2.rviz  uav5.rviz
(+218 files in other folders)
