<?xml version="1.0"?>
<package format="2">
	<name>arena_scan_planner</name>
	<version>0.0.0</version>
	<description>The arena_scan_planner package</description>

	<maintainer email="penicrob@fel.cvut.cz">penicrob</maintainer>


	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>cmake_modules</depend>
	<depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>mrs_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>genmsgs</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>tf</depend>
	<depend>message_generation</depend>

</package>
