<?xml version="1.0"?>
<package>
  <name>brick_detection</name>
  <version>0.0.1</version>
  <description>Package for brick detection from bluefox image</description>

  <maintainer email="stepan@fel.cvut.cz">Petr Štěpán</maintainer>

  <license>GPLv3</license>

  <author email="stepan@fel.cvut.cz">Petr Štěpán</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>mbzirc_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>mrs_lib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/brick_detection.xml" />
  </export>
</package>
