<?xml version="1.0"?>
<package format="2">

  <name>brick_grasping</name>
  <version>1.0.0</version>
  <description>the brick_grasping for the wall_challenge</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>actionlib_msgs</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mbzirc_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mavros_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
