<?xml version="1.0"?>
<package format="2">

  <name>mbzirc_arena_config</name>
  <version>0.0.1</version>
  <description>mbzirc_arena_config</description>

  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mbzirc_msgs</depend>
  <depend>mrs_lib</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
