<?xml version="1.0"?>
<package format="2">
  <name>mbzirc_flyto_planner</name>
  <version>0.0.0</version>
  <description>The mbzirc_flyto_planner package</description>

  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>plan_keeper</depend>
  <depend>mrs_lib</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
