<?xml version="1.0"?>
<package format="2">

  <name>plan_keeper</name>
  <version>0.0.0</version>
  <description>A package for storing the current plan for the Wall Challenge of MBZIRC 2020.</description>

  <author email="vojtech.spurny@fel.cvut.cz">Vojta Spurny</author>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojta Spurny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mbzirc_msgs</depend>
  <depend>brick_grasping</depend>
  <depend>brick_mapping</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  

  <export>
  </export>

</package>
