<?xml version="1.0"?>
<package format="2">

  <name>sim_battery</name>
  <version>1.0.0</version>
  <description>Simulation of the battery for the wall_challenge</description>

  <maintainer email="penicrob@fel.cvut.cz">Robert Penicka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mbzirc_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mavros_msgs</depend>
  <depend>rospy</depend>

</package>
