<package>
  <name>mrs_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     mrs_flexbe_states provides a collection of custom states.
  </description>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
